fix icon names and other things mentioned in bug reports

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2176,7 +2176,7 @@
 	<item component="ComponentInfo{com.binance.dev/com.binance.launcher.activities.main.MainActivity}" drawable="binance" />
 	<item component="ComponentInfo{com.binance.dev/com.eaas.launcher.activities.main.MainActivity}" drawable="binance" />
 	<item component="ComponentInfo{com.binance.us/com.binance.dev.SplashActivity}" drawable="binance" />
-	<item component="ComponentInfo{com.binbin.androidowner/com.binbin.androidowner.MainActivity}" drawable="android_owner" />
+	<item component="ComponentInfo{com.binbin.androidowner/com.binbin.androidowner.MainActivity}" drawable="owndroid" />
 	<item component="ComponentInfo{com.bintianqi.owndroid/com.bintianqi.owndroid.MainActivity}" drawable="owndroid" />
 	<item component="ComponentInfo{com.biomes.vanced/com.biomes.vanced.splash.SplashActivity}" drawable="youtube_vanced" />
 	<item component="ComponentInfo{com.bisimplex.firebooru/com.bisimplex.firebooru.activity.MainActivity}" drawable="anime_boxes" />
@@ -10293,7 +10293,7 @@
 	<item component="ComponentInfo{com.wstxda.viper4android/com.wstxda.viper4android.MainActivity}" drawable="viper" />
 	<item component="ComponentInfo{com.wstxda.voicegpt/com.wstxda.voicegpt.VoiceGptActivity}" drawable="plugin_voicegpt" />
 	<item component="ComponentInfo{com.wtmp.svdsoftware/com.wtmp.ui.HostActivity}" drawable="wtmp" />
-	<item component="ComponentInfo{com.wuliang.xapkinstaller/com.wuliang.xapkinstaller.SplashActivity}" drawable="xpak_installer" />
+	<item component="ComponentInfo{com.wuliang.xapkinstaller/com.wuliang.xapkinstaller.SplashActivity}" drawable="xapk_installer" />
 	<item component="ComponentInfo{com.wunderground.android.weather/com.wunderground.android.weather.ui.WeatherHomeActivity}" drawable="weather_underground" />
 	<item component="ComponentInfo{com.wunderground.android.weather/com.wunderground.android.weather.ui.launcher.WeatherHomeActivity}" drawable="weather_underground" />
 	<item component="ComponentInfo{com.wunderground.android.weather/com.wunderground.android.weather.ui.splash.WeatherHomeActivity}" drawable="weather_underground" />
@@ -13840,7 +13840,7 @@
 	<item component="ComponentInfo{ru.yandex.searchplugin.beta/ru.yandex.searchplugin.MainActivity}" drawable="yandex_start" />
 	<item component="ComponentInfo{ru.yandex.searchplugin/ru.yandex.searchplugin.MainActivity}" drawable="yandex_start" />
 	<item component="ComponentInfo{ru.yandex.subtitles/ru.yandex.subtitles.ui.activity.SplashActivity}" drawable="yandex_talk" />
-	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.MainActivity}" drawable="yandex_taxi" />
+	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.MainActivity}" drawable="yandex_go" />
 	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.StartActivity}" drawable="yandex_go" />
 	<item component="ComponentInfo{ru.yandex.taximeter.beta/ru.yandex.taximeter.yandex_driver.MainActivity}" drawable="yandex_pro" />
 	<item component="ComponentInfo{ru.yandex.taximeter/ru.yandex.taximeter.LoginActivity}" drawable="yandex_pro_alt_1" />
@@ -14074,7 +14074,7 @@
 	<item component="ComponentInfo{tv.danmaku.bili/tv.danmaku.bili.MainActivityV2}" drawable="bilibili" />
 	<item component="ComponentInfo{tv.danmaku.bili/tv.danmaku.bili.ui.splash.SplashActivity}" drawable="bilibili" />
 	<item component="ComponentInfo{tv.medal.recorder/tv.medal.ui.LaunchActivity}" drawable="medal_tv" />
-	<item component="ComponentInfo{tv.molotov.app/tv.molotov.android.splash.SplashActivity}" drawable="molotov" />
+	<item component="ComponentInfo{tv.molotov.app/tv.molotov.android.splash.SplashActivity}" drawable="molotov_tv" />
 	<item component="ComponentInfo{tv.orange/tv.twitch.android.app.core.LandingActivity}" drawable="purpletv" />
 	<item component="ComponentInfo{tv.parsec.client/tv.parsec.client.MainActivity}" drawable="parsec" />
 	<item component="ComponentInfo{tv.periscope.android/tv.periscope.android.LaunchActivity}" drawable="periscope" />
