--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -155,8 +155,7 @@
 	<item drawable="wifilist" />
 	<item drawable="wikidex_net" />
 	<item drawable="windtre_alt_1" />
-	<item drawable="xpak_installer" />
-	<item drawable="xpak_installer_alt_1" />
+	<item drawable="xapk_installer" />
 	<item drawable="yacine_tv" />
 	<item drawable="youamp" />
 	<item drawable="zombie_tsunami" />
@@ -1157,7 +1156,6 @@
 	<item drawable="xbox_alt_2" />
 	<item drawable="xda_labs_alt_1" />
 	<item drawable="xender_alt_1" />
-	<item drawable="xpak_installer_alt_1" />
 	<item drawable="xposed_installer_alt_1" />
 	<item drawable="yandex_alt_1" />
 	<item drawable="yandex_keyboard_alt_1" />
@@ -10530,7 +10528,7 @@
 	<item drawable="xoom" />
 	<item drawable="xos_launcher" />
 	<item drawable="xoss" />
-	<item drawable="xpak_installer" />
+	<item drawable="xapk_installer" />
 	<item drawable="xpark" />
 	<item drawable="xpensor" />
 	<item drawable="xperia_lounge" />
