appfilter.xml: remove brackets and broken lines

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2115,7 +2115,7 @@
 	<item component="ComponentInfo{com.bergfex.mobile.weather/com.bergfex.mobile.activity.WelcomeActivityNew}" drawable="bergfex" />
 	<item component="ComponentInfo{com.bergfex.mobile.weather/com.bergfex.mobile.activity.WelcomeActivity}" drawable="bergfex" />
 	<item component="ComponentInfo{com.bernaferrari.changedetection/com.bernaferrari.changedetection.MainActivity}" drawable="change_detection" />
-	<item component="ComponentInfo{com.berry.yosu/crc64ff3e31ae96ded802.MainActivity}}" drawable="yosu" />
+	<item component="ComponentInfo{com.berry.yosu/crc64ff3e31ae96ded802.MainActivity}" drawable="yosu" />
 	<item component="ComponentInfo{com.besome.sketch/com.besome.sketch.InitActivity}" drawable="sketchware" />
 	<item component="ComponentInfo{com.best.deskclock/com.best.deskclock.DeskClock}" drawable="clock" />
 	<item component="ComponentInfo{com.best.deskclock/com.best.deskclock.FirstLaunch}" drawable="clock" />
@@ -6598,7 +6598,7 @@
 	<item component="ComponentInfo{com.nextcloudpasswords/com.nextcloudpasswords.MainActivity}" drawable="nextcloud_passwords" />
 	<item component="ComponentInfo{com.nextdoor/com.nextdoor.nux.LoadAppConfigurationActivity}" drawable="nextdoor" />
 	<item component="ComponentInfo{com.nextdoor/com.nextdoor.nux.NuxActivity}" drawable="nextdoor" />
-	<item component="ComponentInfo{com.nfcalarmclock/com.nfcalarmclock.main.NacMainActivity}}" drawable="nfc_alarm_clock" />
+	<item component="ComponentInfo{com.nfcalarmclock/com.nfcalarmclock.main.NacMainActivity}" drawable="nfc_alarm_clock" />
 	<item component="ComponentInfo{com.nfl.fantasy.core.android/com.nfl.fantasy.core.android.activities.MainActivity}" drawable="nfl_fantasy" />
 	<item component="ComponentInfo{com.ngame.allstar.eu/com.ngame.allstar.SGameActivity}" drawable="arena_of_valor" />
 	<item component="ComponentInfo{com.ngcam.camera/com.android.camera.CameraLauncher}" drawable="camera" />
@@ -12587,7 +12587,7 @@
 	<item component="ComponentInfo{nfg.supported_apps.android/nfg.supported_apps.android.MainActivity}" drawable="no_icon" />
 	<item component="ComponentInfo{nic.goi.aarogyasetu/nic.goi.aarogyasetu.views.SplashActivity}" drawable="aarogya_setu" />
 	<item component="ComponentInfo{nickrout.lenslauncher/nickrout.lenslauncher.ui.SettingsActivity}" drawable="lens_launcher" />
-	<item component="ComponentInfo{nie.translator.rtranslator/nie.translator.rtranslator.LoadingActivity}}" drawable="rtranslator" />
+	<item component="ComponentInfo{nie.translator.rtranslator/nie.translator.rtranslator.LoadingActivity}" drawable="rtranslator" />
 	<item component="ComponentInfo{nightradio.sunvox/nightradio.sunvox.MyNativeActivity}" drawable="sunvox" />
 	<item component="ComponentInfo{ninja.sesame.app.edge/ninja.sesame.app.edge.activities.MainActivity}" drawable="sesame" />
 	<item component="ComponentInfo{nithra.tamilcalender/nithra.tamilcalender.Splash_Screen}" drawable="nithra_tamil_calendar" />
@@ -12780,7 +12780,6 @@
 	<item component="ComponentInfo{org.buffer.android/org.buffer.android.ui.splash.SplashScreenActivity}" drawable="buffer" />
 	<item component="ComponentInfo{org.bulbagarden.alpha/org.bulbagarden.main.MainActivity}" drawable="bulbapedia" />
 	<item component="ComponentInfo{org.ca.squawker/org.ca.squawker.MainActivity}" drawable="squawker" />
-	<item component="ComponentInfo{org.ca.squawkerorg.ca.squawker.MainActivity}" drawable="squawker" />
 	<item component="ComponentInfo{org.calyxinstitute.vpn/se.leap.bitmaskclient.StartActivity}" drawable="calyx_vpn" />
 	<item component="ComponentInfo{org.calyxinstitute.vpn/se.leap.bitmaskclient.base.StartActivity}" drawable="calyx_vpn" />
 	<item component="ComponentInfo{org.calyxos.eleven/org.lineageos.eleven.ui.activities.HomeActivity}" drawable="music" />
@@ -13110,7 +13109,6 @@
 	<item component="ComponentInfo{org.purplei2p.i2pd/org.purplei2p.i2pd.I2PDPermsAskerActivity}" drawable="i2pd" />
 	<item component="ComponentInfo{org.qosp.notes/org.qosp.notes.ui.MainActivity}" drawable="quill_note" />
 	<item component="ComponentInfo{org.qpython.qpy/org.qpython.qpy.main.activity.SplashActivity}" drawable="qpython" />
-	<item component="ComponentInfo{org.qpython.qpy}" drawable="qpython" />
 	<item component="ComponentInfo{org.qtproject.friendiqa/androidnative.friendiqa.FriendiqaActivity}" drawable="friendiqa" />
 	<item component="ComponentInfo{org.quantumbadger.redreader/org.quantumbadger.redreader.activities.MainActivity}" drawable="red__reader" />
 	<item component="ComponentInfo{org.quentin_bettoum.librememorygame/com.godot.game.GodotApp}" drawable="libre_memory_game" />
