remove redundant lines from appfilter.xml and fix other issues

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4053,6 +4053,7 @@
 	<item drawable="down_detector" />
 	<item drawable="down_dog_meditation" />
 	<item drawable="down_dog_workout" />
+	<item drawable="down_dog_yoga" />
 	<item drawable="download_navi" />
 	<item drawable="downpour" />
 	<item drawable="downwell" />
@@ -6311,7 +6312,6 @@
 	<item drawable="medilog" />
 	<item drawable="mediolanum" />
 	<item drawable="medisafe" />
-	<item drawable="meditation_down_dog" />
 	<item drawable="meditation_studio" />
 	<item drawable="meditation_timer_log" />
 	<item drawable="meditationtimer" />
@@ -10646,7 +10646,6 @@
 	<item drawable="yik_yak" />
 	<item drawable="ymusic" />
 	<item drawable="ynab" />
-	<item drawable="yoga_down_dog" />
 	<item drawable="yokai" />
 	<item drawable="yolo" />
 	<item drawable="yomiwa" />
