Update icon link for eero

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14347,4 +14347,5 @@
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
 	<item component="ComponentInfo{com.booking/com.booking.startup.HomeActivityMonochromeIcon}" drawable="booking_com" />
 	<item component="ComponentInfo{com.nytimes.crossword/com.nytimes.games.core.activity.MainActivity}" drawable="the_new_york_times_crossword" />
+	<item component="ComponentInfo{com.eero.android/com.eero.android.v3.features.splash.SplashActivity}" drawable="eero" />
 </resources>
