Add some icons, fix icon linkages (#917)
* Fix booking.com icon link

* Fix NYT icon link

* Add icon for zonetouch3

* Update icon link for eero

* Add Solax cloud icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14345,4 +14345,7 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{com.booking/com.booking.startup.HomeActivityMonochromeIcon}" drawable="booking_com" />
+	<item component="ComponentInfo{com.nytimes.crossword/com.nytimes.games.core.activity.MainActivity}" drawable="the_new_york_times_crossword" />
+	<item component="ComponentInfo{com.eero.android/com.eero.android.v3.features.splash.SplashActivity}" drawable="eero" />
 </resources>
