--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10433,7 +10433,7 @@
 	<item component="ComponentInfo{com.yopeso.lieferando/com.yopeso.lieferando.SplashActivity}" drawable="takeaway" />
 	<item component="ComponentInfo{com.yoshi.rain/com.example.rain.MainActivity}" drawable="rain" />
 	<item component="ComponentInfo{com.yoshi.todark/com.example.dark_todo.MainActivity}" drawable="todark" />
-	<item component="ComponentInfo{com.you.browser/com.you.browser.App}" drawable="you_com" />
+	<item component="ComponentInfo{com.you.browser/com.you.browser.App}" drawable="you_com_alt_1" />
 	<item component="ComponentInfo{com.youdao.hindict/com.youdao.hindict.activity.MainActivity}" drawable="u_dictionary" />
 	<item component="ComponentInfo{com.youdao.hindict/com.youdao.hindict.activity.SplashActivity}" drawable="u_dictionary" />
 	<item component="ComponentInfo{com.youdao.note/com.youdao.note.activity2.SplashActivity}" drawable="quickmemo" />
