new icons by johnmaneca; add missing and fix others

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -302,6 +302,7 @@
 	<item drawable="duckduckgo_green" />
 	<item drawable="duckduckgo_purple" />
 	<item drawable="duckduckgo_silhouette" />
+	<item drawable="easter_eggs_alt_1" />
 	<item drawable="ebay_kleinanzeigen_alt_1" />
 	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
@@ -4173,7 +4174,6 @@
 	<item drawable="e_trade" />
 	<item drawable="ear_one" />
 	<item drawable="early_bird_clock" />
-	<item drawable="easter_eggs" />
 	<item drawable="easy_diary" />
 	<item drawable="easy_drawer" />
 	<item drawable="easy_japanese" />
