Fix componentinfo for nearby sharing windows

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11052,6 +11052,7 @@
 	<item component="ComponentInfo{de.sesu8642.feudaltactics/de.sesu8642.feudaltactics.AndroidLauncher}" drawable="feudal_tactics" />
 	<item component="ComponentInfo{de.sevenmind.android/de.sevenmind.android.MainActivity}" drawable="_7mind" />
 	<item component="ComponentInfo{de.shortdev.nearby_sharing_windows/crc642138225d2d50e687.MainActivity}" drawable="nearby_sharing_windows" />
+	<item component="ComponentInfo{de.shortdev.nearby_sharing_windows/crc649733edcd8ffd4bdd.MainActivity}" drawable="nearby_sharing_windows" />
 	<item component="ComponentInfo{de.simolation.subscriptionmanager/de.simolation.subscriptionmanager.ui.main.MainActivity}" drawable="abonnements" />
 	<item component="ComponentInfo{de.simon.dankelmann.bluetoothlespam/de.simon.dankelmann.bluetoothlespam.MainActivity}" drawable="bluetooth_le_spam" />
 	<item component="ComponentInfo{de.simono.nightcitymap/de.simono.nightcitymap.MainActivity}" drawable="night_city_map" />
