Add componentinfo for flashlight

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1609,6 +1609,7 @@
 	<item component="ComponentInfo{com.android.stk/com.android.stk.mtk.StkLauncherActivityI}" drawable="sim_toolkit" />
 	<item component="ComponentInfo{com.android.stklct/com.android.stklct.StkMain}" drawable="sim_toolkit" />
 	<item component="ComponentInfo{com.android.systemui/com.android.systemui.flashlight.FlashLightActivity}" drawable="flashlight" />
+	<item component="ComponentInfo{com.android.systemui/com.android.systemui.flashlight.FlashlightActivity}" drawable="flashlight" />
 	<item component="ComponentInfo{com.android.terminal/com.android.terminal.TerminalActivity}" drawable="terminal" />
 	<item component="ComponentInfo{com.android.thememanager/com.android.thememanager.ThemeResourceTabActivity}" drawable="theme_chooser" />
 	<item component="ComponentInfo{com.android.tv.settings/com.android.tv.settings.MainSettings}" drawable="settings" />
