Add 2 new icons and 1 new componentinfo

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -364,4 +364,9 @@
         name="Leilei332"
         image="https://avatars.githubusercontent.com/u/70204468"
         link="https://github.com/Leilei332"/>
+    <contributor
+            name="David Josefson"
+            contribution="Icons"
+            image="https://avatars.githubusercontent.com/u/7073402"
+            link="https://github.com/davidjosefson" />
 </resources>
