--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1490,6 +1490,7 @@
 	<item component="ComponentInfo{com.android.email/com.android.email.activity.Welcome}" drawable="aosp_mail" />
 	<item component="ComponentInfo{com.android.email/com.kingsoft.email.activity.Welcome}" drawable="aosp_mail" />
 	<item component="ComponentInfo{com.android.email/com.kingsoft.email.activity.setup.GuideActivity}" drawable="aosp_mail" />
+	<item component="ComponentInfo{com.android.browser/com.huawei.browser.Main2}" drawable="browser" />
 	<item component="ComponentInfo{com.android.fileexplorer/com.android.fileexplorer.FileExplorerTabActivity}" drawable="cyanogenmod_file_manager" />
 	<item component="ComponentInfo{com.android.fileexplorer/com.android.fileexplorer.MainActivity}" drawable="cyanogenmod_file_manager" />
 	<item component="ComponentInfo{com.android.filemanager/com.android.filemanager.FileManagerActivity}" drawable="file_manager" />
