fix icons, credits @johnmaneca on Discord

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13268,7 +13268,7 @@
 	<item component="ComponentInfo{org.septa.android.app/org.septa.android.app.SplashScreenActivity}" drawable="septa" />
 	<item component="ComponentInfo{org.shadowice.flocke.andotp/org.shadowice.flocke.andotp.Activities.MainActivity}" drawable="andotp" />
 	<item component="ComponentInfo{org.sharethemeal.app/org.sharethemeal.app.splash.SplashActivity}" drawable="share_the_meal" />
-	<item component="ComponentInfo{org.sinamon.duchinese/org.sinamon.duchinese.views.MainActivity}" drawable="du_chinese" />
+	<item component="ComponentInfo{org.sinamon.duchinese/org.sinamon.duchinese.ui.views.MainActivity}" drawable="du_chinese" />
 	<item component="ComponentInfo{org.skvalex.cr/org.skvalex.cr.LauncherActivity}" drawable="call_recorder" />
 	<item component="ComponentInfo{org.smssecure.smssecure/org.smssecure.smssecure.RoutingActivity}" drawable="silence_sms" />
 	<item component="ComponentInfo{org.softeg.slartus.forpdaplus/org.softeg.slartus.forpdaplus.MainActivity}" drawable="_4pda" />
