add icons (made by @vegeta9900)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -56,6 +56,10 @@
 	<item drawable="yamlauncher" />
 	<item drawable="yodobashi" />
 	<item drawable="ze_delivery_de_bebidas" />
+	<item drawable="dinamalar" />
+	<item drawable="jiojoin" />
+	<item drawable="tooly" />
+	<item drawable="stock_market_simulator" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -189,6 +193,8 @@
 	<item drawable="device_id_changer_alt_1" />
 	<item drawable="device_info_hw_alt_1" />
 	<item drawable="dictionary_com_alt_1" />
+	<item drawable="dinamalar_alt_1" />
+	<item drawable="dinamalar_alt_2" />
 	<item drawable="directv_alt_1" />
 	<item drawable="disconnect_alt" />
 	<item drawable="discord_alt_1" />
@@ -309,6 +315,7 @@
 	<item drawable="jerboa_for_lemmy_alt_1" />
 	<item drawable="jina_drawer_alt_1" />
 	<item drawable="jiojoin_alt_1" />
+	<item drawable="jiojoin_alt_2" />
 	<item drawable="joox_alt_1" />
 	<item drawable="joplin_alt_1" />
 	<item drawable="junior_hockey_league_alt_1" />
@@ -917,6 +924,8 @@
 	<item drawable="stealth_alt_1" />
 	<item drawable="stellio_alt_1" />
 	<item drawable="stockx_alt_1" />
+	<item drawable="stock_market_simulator_alt_1" />
+	<item drawable="stock_market_simulator_alt_2" />
 	<item drawable="streetmeasure_alt_1" />
 	<item drawable="student_beans_alt_1" />
 	<item drawable="substratum_alt_1" />
@@ -988,6 +997,7 @@
 	<item drawable="todoist_sky" />
 	<item drawable="todoist_sunflower" />
 	<item drawable="todoist_tangerine" />
+	<item drawable="tooly_alt_1" />
 	<item drawable="tower_of_fantasy_alt_1" />
 	<item drawable="transit_alt" />
 	<item drawable="transit_black" />
