--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -181,6 +181,11 @@
         image="https://avatars.githubusercontent.com/u/18448587"
         link="https://github.com/joelchrono12" />
     <contributor
+        name="johnmaneca"
+        contribution="Icons"
+        image="https://raw.githubusercontent.com/Delta-Icons/android/master/.github/images/contributors/johnmaneca.png"
+        link="" />
+    <contributor
         name="Kacper Wardega"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/16328602"
@@ -335,6 +340,11 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/51379453"
         link="https://github.com/Tripticon84" />
+    <contributor
+        name="vegeta9900"
+        contribution="Icons"
+        image="https://raw.githubusercontent.com/Delta-Icons/android/master/.github/images/contributors/vegeta9900.png"
+        link="" />
     <contributor
         name="watson-nm"
         contribution="Icons"
