--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -97,6 +97,7 @@
 	<item drawable="yodobashi" />
 	<item drawable="ze_delivery_de_bebidas" />
 	<item drawable="zen_com" />
+	<item drawable="materialious" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -396,6 +397,7 @@
 	<item drawable="mastodon_alt_2" />
 	<item drawable="mastodon_alt_3" />
 	<item drawable="mastodon_alt_4" />
+	<item drawable="materialious_alt_1" />
 	<item drawable="mcdonalds_alt_1" />
 	<item drawable="medibuddy_alt_1" />
 	<item drawable="medium_alt_1" />
