--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -51,6 +51,11 @@
 	<item drawable="velib" />
 	<item drawable="widget_sunrise_sunset" />
 	<item drawable="zygisk_detach" />
+	<item drawable="telegram_aqua" />
+	<item drawable="telegram_nox" />
+	<item drawable="telegram_premium" />
+	<item drawable="telegram_turbo" />
+	<item drawable="telegram_vintage" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -948,6 +953,11 @@
 	<item drawable="tata_play_alt_1" />
 	<item drawable="tele2_alt_1" />
 	<item drawable="telegram_alt_1" />
+	<item drawable="telegram_aqua" />
+	<item drawable="telegram_nox" />
+	<item drawable="telegram_premium" />
+	<item drawable="telegram_turbo" />
+	<item drawable="telegram_vintage" />
 	<item drawable="terraria_alt_1" />
 	<item drawable="texpand_alt_1" />
 	<item drawable="that_level_again_alt_1" />
