Add icon for PG19

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7269,6 +7269,7 @@
 	<item component="ComponentInfo{com.petcube.android/com.petcube.android.screens.splash.SplashActivity}" drawable="petcube" />
 	<item component="ComponentInfo{com.petsmart.consumermobile/com.pk.ui.activity.AppEntryActivity}" drawable="petsmart" />
 	<item component="ComponentInfo{com.pg.oralb.oralbapp/com.pg.oralb.oralbapp.StartActivity}" drawable="oralb" />
+	<item component="ComponentInfo{com.pg.pg19_official/com.pg.pg19_official.MainActivity}" drawable="_19"/>
 	<item component="ComponentInfo{com.pgt.veoride/com.pgt.veoride.login.firstwelcome.WelcomeActivity}" drawable="veo" />
 	<item component="ComponentInfo{com.ph.nabla_typemath/com.ph.nabla_typemath.MainActivity}" drawable="nabla_typemath" />
 	<item component="ComponentInfo{com.phdv.universal/com.phdv.universal.feature.main.MainActivity}" drawable="pizza_hut" />
