--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="_19" />
 	<item drawable="atom_turtle_beach" />
 	<item drawable="audials" />
 	<item drawable="autocad" />
@@ -1718,6 +1719,7 @@
 	<item drawable="_0h_h1" />
 	<item drawable="_0h_n0" />
 	<item drawable="_1_second_everyday" />
+	<item drawable="_19" />
 	<item drawable="_1by1" />
 	<item drawable="_1dm" />
 	<item drawable="_1dm_plus" />
