add icons&componentinfo, premium request

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14680,4 +14680,7 @@
 	<item component="ComponentInfo{org.telegram.messenger/org.telegram.messenger.NoxIcon}" drawable="telegram_nox" />
 	<item component="ComponentInfo{org.telegram.messenger/org.telegram.messenger.TurboIcon}" drawable="telegram_turbo" />
 	<item component="ComponentInfo{org.telegram.messenger/org.telegram.messenger.PremiumIcon}" drawable="telegram_premium" />
+	<item component="ComponentInfo{com.infonow.bofa/com.bofa.ecom.marvel.application.Flagscape}" drawable="bank_of_america" />
+	<item component="ComponentInfo{com.coinbase.android/com.coinbase.retailnativeruntime.LaunchActivity}" drawable="coinbase" />
+	<item component="ComponentInfo{com.aetna.aetnahealth/com.aetna.navigation.splashscreen.AetnaSplashScreenActivity}" drawable="aetna_health" />
 </resources>
