--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -57,6 +57,7 @@
 	<item drawable="telegram_premium" />
 	<item drawable="telegram_turbo" />
 	<item drawable="telegram_vintage" />
+	<item drawable="bank_of_america" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -117,6 +118,7 @@
 	<item drawable="badoo_alt_1" />
 	<item drawable="bang_dream_alt_1" />
 	<item drawable="bank_id_alt_1" />
+	<item drawable="bank_of_america_alt_1" />
 	<item drawable="basic_call_recorder_alt_1" />
 	<item drawable="battery_guru_alt_1" />
 	<item drawable="bilibili_alt_1" />
