--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -206,6 +206,11 @@
         image="https://avatars.githubusercontent.com/u/70204468"
         link="https://github.com/Leilei332"/>
     <contributor
+        name="leonarrdo"
+        contribution="Icons"
+        image="https://raw.githubusercontent.com/Delta-Icons/android/master/.github/images/contributors/leonarrdo.png"
+        link=""/>
+    <contributor
         name="Luke Wong"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/148693"
