add also kofi, paypal now available

--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -78,7 +78,7 @@
             <br>
             <p>Feel free to <a href="https://discord.gg/F9RFqHN">join our Discord server</a> if you need help contributing or just want to chat with other contributors. The server is <b>not</b> intended for icon requests.</p>
             <br>
-            <p>⭐ Premium requests are back for a limited time! Click <a href="https://buymeacoffee.com/gitro/extras">here</a> to get your icons faster!
+            <p>⭐ Priority icon requests are back! Check <a href="https://buymeacoffee.com/gitro/extras">BuyMeACoffee</a> or <a href="https://ko-fi.com/gitro/shop">Ko-Fi</a> to get your icons faster!</p>
         ]]>
     </string>
 
