--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -185,6 +185,7 @@
 	<item drawable="xfinity" />
 	<item drawable="yoo_kassa" />
 	<item drawable="zygisk_detach" />
+	<item drawable="easter_eggs" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -338,6 +339,7 @@
 	<item drawable="duckduckgo_purple" />
 	<item drawable="duckduckgo_silhouette" />
 	<item drawable="easter_eggs_alt_1" />
+	<item drawable="easter_eggs_alt_2" />
 	<item drawable="ebay_kleinanzeigen_alt_1" />
 	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
