icon update: Yandex Go

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14369,8 +14369,8 @@
 	<item component="ComponentInfo{ru.yandex.searchplugin.beta/ru.yandex.searchplugin.MainActivity}" drawable="yandex_start" />
 	<item component="ComponentInfo{ru.yandex.searchplugin/ru.yandex.searchplugin.MainActivity}" drawable="yandex_start" />
 	<item component="ComponentInfo{ru.yandex.subtitles/ru.yandex.subtitles.ui.activity.SplashActivity}" drawable="yandex_talk" />
-	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.MainActivity}" drawable="yandex_go" />
-	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.StartActivity}" drawable="yandex_go" />
+	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.MainActivity}" drawable="yandex_go_alt_1" />
+	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.StartActivity}" drawable="yandex_go_alt_1" />
 	<item component="ComponentInfo{ru.yandex.taximeter.beta/ru.yandex.taximeter.yandex_driver.MainActivity}" drawable="yandex_pro" />
 	<item component="ComponentInfo{ru.yandex.taximeter/ru.yandex.taximeter.LoginActivity}" drawable="yandex_pro_alt_1" />
 	<item component="ComponentInfo{ru.yandex.taximeter/ru.yandex.taximeter.yandex_driver.MainActivity}" drawable="yandex_pro" />
