--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -1256,6 +1256,7 @@
 	<item drawable="xender_alt_1" />
 	<item drawable="xposed_installer_alt_1" />
 	<item drawable="yandex_alt_1" />
+	<item drawable="yandex_go_alt_1" />
 	<item drawable="yandex_keyboard_alt_1" />
 	<item drawable="yandex_lavka_alt_1" />
 	<item drawable="yandex_mail_alt_1" />
@@ -11064,7 +11065,6 @@
 	<item drawable="yandex_fuel" />
 	<item drawable="yandex_games" />
 	<item drawable="yandex_gamesflow" />
-	<item drawable="yandex_go" />
 	<item drawable="yandex_health" />
 	<item drawable="yandex_key" />
 	<item drawable="yandex_keyboard" />
