Fix Mercado Libre icon and display name

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6263,8 +6263,8 @@
 	<item component="ComponentInfo{com.menulog.m/com.justeat.splash.ui.SplashActivity}" drawable="takeaway" />
 	<item component="ComponentInfo{com.meralco.phone.move/com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity}" drawable="meralco" />
 	<item component="ComponentInfo{com.mercadeotodo.espejogratis/com.mercadeotodo.espejogratis.activities.MainActivity}" drawable="mirror" />
-	<item component="ComponentInfo{com.mercadolibre/com.mercadolibre.activities.SplashActivity}" drawable="mercadolibre" />
-	<item component="ComponentInfo{com.mercadolibre/com.mercadolibre.splash.SplashActivity}" drawable="mercadolibre" />
+	<item component="ComponentInfo{com.mercadolibre/com.mercadolibre.activities.SplashActivity}" drawable="mercado_libre" />
+	<item component="ComponentInfo{com.mercadolibre/com.mercadolibre.splash.SplashActivity}" drawable="mercado_libre" />
 	<item component="ComponentInfo{com.mercadopago.wallet/com.mercadopago.wallet.AccountSummaryActivity}" drawable="mercado_pago" />
 	<item component="ComponentInfo{com.mercantilbanco.mercantilmovil/com.mercantilbanco.mercantilmovil.mmpx}" drawable="bank" />
 	<item component="ComponentInfo{com.mercariapp.mercari/com.mercari.denali.MainActivity}" drawable="mercari" />
