--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6458,8 +6458,8 @@
 	<item drawable="mensaplus" />
 	<item drawable="mental_math_master" />
 	<item drawable="meralco" />
+	<item drawable="mercado_libre" />
 	<item drawable="mercado_pago" />
-	<item drawable="mercadolibre" />
 	<item drawable="mercari" />
 	<item drawable="mercedes" />
 	<item drawable="merck_manual_consumer" />
