--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="mercado_pago" />
+	<item drawable="my_fitness_pal" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -315,6 +317,7 @@
 	<item drawable="meetic_alt_1" />
 	<item drawable="mega_alt_1" />
 	<item drawable="memrise_alt_1" />
+	<item drawable="mercado_pago_alt_1" />
 	<item drawable="mercari_alt_1" />
 	<item drawable="messenger_alt_1" />
 	<item drawable="messenger_lite_alt_1" />
@@ -356,6 +359,7 @@
 	<item drawable="music_alt_5" />
 	<item drawable="musicolet_alt_1" />
 	<item drawable="musify_alt_1" />
+	<item drawable="my__fitness__pal_alt_1" />
 	<item drawable="my_att_alt_1" />
 	<item drawable="myfastweb_alt_1" />
 	<item drawable="mysplash_alt_1" />
