--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -208,7 +208,7 @@
 	<item component="ComponentInfo{amirz.googleicons/amirz.googleicons.MainActivity}" drawable="google_icons" />
 	<item component="ComponentInfo{amirz.rootless.nexuslauncher/com.google.android.apps.nexuslauncher.NexusLauncherActivity}" drawable="rootless_launcher" />
 	<item component="ComponentInfo{amirz.shade/amirz.shade.ShadeLauncher}" drawable="ruthless_launcher" />
-	<item component="ComponentInfo{anddea.youtube/com.google.android.youtube.app.honeycomb.Shell}" drawable="youtube_revanced_alt_6" />
+	<item component="ComponentInfo{anddea.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity}" drawable="youtube_revanced_alt_6" />
 	<item component="ComponentInfo{android12uforkwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="android_12_u_kwgt" />
 	<item component="ComponentInfo{android12widget.kustom.pack/android12widget.kustom.pack.MainActivity}" drawable="android_13_kwgt" />
 	<item component="ComponentInfo{android.AbcApplication/au.net.abc.apollo.homescreen.HomeScreenActivity}" drawable="abc_news" />
@@ -313,7 +313,7 @@
 	<item component="ComponentInfo{app.revanced.manager.flutter/app.revanced.manager.flutter.MainActivity}" drawable="revanced_manager" />
 	<item component="ComponentInfo{app.revanced.manager/app.revanced.manager.MainActivity}" drawable="revanced_manager" />
 	<item component="ComponentInfo{app.rvx.android.apps.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity}" drawable="youtube_music_revanced" />
-	<item component="ComponentInfo{app.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell}" drawable="youtube_revanced_alt_6" />
+	<item component="ComponentInfo{aapp.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity}" drawable="youtube_revanced_alt_6" />
 	<item component="ComponentInfo{app.rvx.manager.flutter/app.revanced.manager.flutter.MainActivity}" drawable="rvx_manager" />
 	<item component="ComponentInfo{app.safesky.fis/app.safesky.fis.MainActivity}" drawable="safesky" />
 	<item component="ComponentInfo{app.sarhne.com/app.sarhne.com.Start}" drawable="sarhne" />
@@ -4456,7 +4456,7 @@
 	<item component="ComponentInfo{com.google.android.apps.aiy/com.google.android.apps.aiy.main.MainActivity}" drawable="google_aiy_projects" />
 	<item component="ComponentInfo{com.google.android.apps.androidify/com.google.android.apps.androidify.Androidify}" drawable="androidify" />
 	<item component="ComponentInfo{com.google.android.apps.assistant/com.google.android.apps.assistant.go.MainActivity}" drawable="google_assistant_go" />
-	<item component="ComponentInfo{com.google.android.apps.authenticator2/com.google.android.apps.authenticator2.main.}" drawable="google_authenticator" />
+	<item component="ComponentInfo{com.google.android.apps.authenticator2/com.google.android.apps.authenticator2.main.MainActivity}" drawable="google_authenticator" />
 	<item component="ComponentInfo{com.google.android.apps.authenticator2/com.google.android.apps.authenticator.AuthenticatorActivity}" drawable="google_authenticator" />
 	<item component="ComponentInfo{com.google.android.apps.bard/com.google.android.apps.bard.shellapp.BardEntryPointActivity}" drawable="google_gemini" />
 	<item component="ComponentInfo{com.google.android.apps.blogger/com.google.android.apps.blogger.ApplicationActivity}" drawable="blogger" />
