--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,8 @@
 	<category title="New" />
 	<item drawable="mercado_pago" />
 	<item drawable="my_fitness_pal" />
+	<item drawable="medium" />
+	<item drawable="pingid" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -312,6 +314,7 @@
 	<item drawable="mcdonalds_alt_1" />
 	<item drawable="medibuddy_alt_1" />
 	<item drawable="medium_alt_1" />
+	<item drawable="medium_alt_2" />
 	<item drawable="medtronic_minimed_alt_1" />
 	<item drawable="medtronic_minimed_alt_2" />
 	<item drawable="meetic_alt_1" />
@@ -454,6 +457,7 @@
 	<item drawable="phone_guardian_alt_1" />
 	<item drawable="pics__art_alt_1" />
 	<item drawable="picsart_animator_alt_1" />
+	<item drawable="pingid_alt_1" />
 	<item drawable="plato_alt_1" />
 	<item drawable="playstation_alt_1" />
 	<item drawable="pocketcasts_alt_1" />
