Update Google Play apps icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -17,6 +17,20 @@
 	<item drawable="discover_mobile" />
 	<item drawable="frontpage" />
 	<item drawable="goblin_tools" />
+	<item drawable="google_play_books" />
+	<item drawable="google_play_developer_console" />
+	<item drawable="google_play_games" />
+	<item drawable="google_play_movies" />
+	<item drawable="google_play_music" />
+	<item drawable="google_play_newsstand" />
+	<item drawable="google_play_store" />
+	<item drawable="google_play_books_alt_1" />
+	<item drawable="google_play_developer_console_alt_1" />
+	<item drawable="google_play_games_alt_1" />
+	<item drawable="google_play_movies_alt_1" />
+	<item drawable="google_play_music_alt_1" />
+	<item drawable="google_play_newsstand_alt_1" />
+	<item drawable="google_play_store_alt_1" />
 	<item drawable="grammarly_ai_assistant" />
 	<item drawable="lagrange" />
 	<item drawable="liieypet" />
@@ -254,7 +268,12 @@
 	<item drawable="google_photos_alt_1" />
 	<item drawable="google_photos_alt_2" />
 	<item drawable="google_photos_alt_3" />
+	<item drawable="google_play_books_alt_1" />
 	<item drawable="google_play_developer_console_alt_1" />
+	<item drawable="google_play_games_alt_1" />
+	<item drawable="google_play_movies_alt_1" />
+	<item drawable="google_play_music_alt_1" />
+	<item drawable="google_play_newsstand_alt_1" />
 	<item drawable="google_play_store_alt_1" />
 	<item drawable="google_plus_alt_1" />
 	<item drawable="google_voice_alt_1" />
